@@ -1,17 +1,0 @@
-# $NetBSD: Makefile,v 1.4 2022/01/04 20:55:12 wiz Exp $
-
-DISTNAME=	monotonic-1.6
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	time python
-MASTER_SITES=	${MASTER_SITE_PYPI:=m/monotonic/}
-
-MAINTAINER=	triaxx@NetBSD.org
-HOMEPAGE=	https://github.com/atdt/monotonic
-COMMENT=	Implementation of time.monotonic() for Python
-LICENSE=	apache-2.0
-
-USE_LANGUAGES=	# none
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
