@@ -1,8 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2018/01/26 17:17:35 triaxx Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/monotonic.py
-${PYSITELIB}/monotonic.pyc
-${PYSITELIB}/monotonic.pyo
